--- a/notebooks/LiDAR_viz.ipynb
+++ b/notebooks/LiDAR_viz.ipynb
@@ -2,7 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "処理を開始します...\n",
+            "処理が完了しました。出力先: output/No4-friction-8mm/\n"
+          ]
+        }
+      ],
       "source": [
         "# Google Colab のみ実行（Drive マウント・プロジェクトルートへ移動）\n",
         "try:\n",
@@ -35,18 +46,7 @@
         "# パイプライン実行（図・CSV・metadata を output/<case>/ に保存）\n",
         "print(\"処理を開始します...\")\n",
         "result = run_case(params_path, _root)\n",
-        "print(f\"処理が完了しました。出力先: output/{params_path.stem}/\")\n",
-        ""
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "処理を開始します...\n",
-            "処理が完了しました。出力先: output/No4-friction-8mm/\n"
-          ]
-        }
+        "print(f\"処理が完了しました。出力先: output/{params_path.stem}/\")\n"
       ]
     }
   ],
