google colab関連のpath修正

--- a/notebooks/LiDAR_viz.ipynb
+++ b/notebooks/LiDAR_viz.ipynb
@@ -31,22 +31,29 @@
         "np.random.seed(0)\n",
         "random.seed(0)\n",
         "\n",
-        "# プロジェクトルートを取得（Notebook またはプロジェクト直下から実行）\n",
+        "# プロジェクトルート（コード・params_sample の場所）\n",
         "_root = Path.cwd() if (Path.cwd() / \"src\").is_dir() else Path.cwd().parent\n",
         "sys.path.insert(0, str(_root)) if str(_root) not in sys.path else None\n",
         "\n",
+        "# Colab: data/params/output は lidar_analysis 以下。ローカル: プロジェクト直下のまま\n",
+        "try:\n",
+        "    from google.colab import drive as _  # noqa: F401\n",
+        "    _workspace = Path(\"/content/drive/MyDrive/Colab Notebooks/lidar_analysis\")\n",
+        "except ImportError:\n",
+        "    _workspace = _root\n",
+        "\n",
         "# ========== ケース変更はここを編集 ==========\n",
-        "# 初回: params_sample を params にコピーしてから編集すること（README 参照）\n",
-        "# params/ 内のYAMLファイル名を変更してください（例: No7-friction-8mm.yaml）\n",
-        "params_path = _root / \"params\" / \"No4-friction-8mm.yaml\"\n",
+        "# 初回: params_sample を params にコピーしてから編集（README 参照）\n",
+        "# Colab の場合は lidar_analysis/params/ にコピーすること\n",
+        "params_path = _workspace / \"params\" / \"No4-friction-8mm.yaml\"\n",
         "# ==========================================\n",
         "\n",
         "from src.lidar import run_case\n",
         "\n",
         "# パイプライン実行（図・CSV・metadata を output/<case>/ に保存）\n",
         "print(\"処理を開始します...\")\n",
-        "result = run_case(params_path, _root)\n",
-        "print(f\"処理が完了しました。出力先: output/{params_path.stem}/\")\n"
+        "result = run_case(params_path, _workspace)\n",
+        "print(f\"処理が完了しました。出力先: {_workspace / 'output' / params_path.stem}/\")\n"
       ]
     }
   ],
