structure: Colab のプロジェクト配置先を Colab Notebooks/LiDAR-viz に変更
- What:
  - notebooks/LiDAR_viz.ipynb の Colab 用 %cd を
    /content/drive/MyDrive/LiDAR-viz/ から
    /content/drive/MyDrive/Colab Notebooks/LiDAR-viz/ に変更。

- Why:
  - Colab 利用時にプロジェクトを「Colab Notebooks/LiDAR-viz」に置く運用に合わせるため。
  - data/params/output は従来どおり lidar_analysis を参照（_workspace は未変更）。

- Impact:
  - 数値・ロジック・API: 影響なし。
  - Colab: プロジェクトを Colab Notebooks/LiDAR-viz に置く前提になる。
  - ローカル: 変更なし。

- Validation:
  - ローカルでノートブック実行し、出力が従来と同一であること。
  - Colab で Colab Notebooks/LiDAR-viz にプロジェクトを置き、先頭セルから実行して
    run_case が正常終了すること。

--- a/notebooks/LiDAR_viz.ipynb
+++ b/notebooks/LiDAR_viz.ipynb
@@ -19,7 +19,7 @@
         "try:\n",
         "    from google.colab import drive\n",
         "    drive.mount(\"/content/drive\")\n",
-        "    %cd /content/drive/MyDrive/LiDAR-viz/\n",
+        "    %cd /content/drive/MyDrive/Colab Notebooks/LiDAR-viz/\n",
         "except ImportError:\n",
         "    pass  # ローカル実行時はスキップ\n",
         "\n",
